# lambix-old

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bochsrc  build.rs  grub.cfg  linker.ld  perl.pl  x86_64-unknown-lambix.json
acpica/: Cargo.toml  acpica.h  build.rs  x86_64-unknown-lambix.json
acpica/acpica/: Makefile
acpica/acpica/src/: acclib.h  acpi.h.gch  actypes.h  dsfield.c  dsinit.c  dsobject.c  exconcat.c  exconfig.c  exconvrt.c  exfield.c  exfldio.c  exmisc.c  exoparg2.c  exoparg3.c  exregion.c  exserial.c  exstorob.c  nsconvert.c  nsinit.c  nsxfname.c  rsmisc.c  rsutils.c  rsxface.c  tbdata.c  tbfadt.c  tbfind.c  tbprint.c  tbutils.c  tbxface.c  tbxfload.c  utalloc.c  utcache.c  utclib.c  utcopy.c  uttrack.c  utxface.c
acpica/src/: lib.rs
lib/: Cargo.toml
lib/src/: asm.rs  lib.rs  per_cpu.rs  sync.rs
lib/src/asm/: cpuid.rs  interrupts.rs  io.rs  msr.rs  paging.rs
lib/src/ffi/: cstr.rs
lib/src/sync/: spinlock.rs  static_spinlock.rs
src/: boot.rs  kernel.rs  main.rs  panic.rs
src/boot/: bootstrap.rs  early_kprintln.rs  multiboot.rs  start.S  vga_buffer.rs
src/boot/multiboot/: acpi.rs  memmap.rs
src/boot/vga_buffer/: buffer.rs  character.rs  line.rs
src/drivers/: acpi.rs  mod.rs  vga_buffer.rs
src/drivers/acpi/: acpica_os_layer.rs  lacpica.rs  tables.rs
src/drivers/vga_buffer/: buffer.rs  character.rs  line.rs
src/kernel/: apic.rs  idt.rs  mem.rs  table.rs
src/kernel/config/: mod.rs  util.rs
src/kernel/mem/: addr.rs  alloc.rs  page.rs  page_alloc.rs  paging.rs  valloc.rs  vbox.rs  vbuffer.rs
src/kernel/table/: gdt.rs  (+2 more)
(+17 files in other folders)
