[package]
name = "lambix"
version = "0.1.0"
authors = ["Lamb <contact@lambixtowolf.me>"]
edition = "2018"

[dependencies]
bitflags = "1.2.0"
lib = { path = "lib/" }
acpica = { path = "acpica/" }
cty = "0.2.1"
printf-compat = { version = "0.1", default-features = false }

[build-dependencies]
sha1 = "0.6"

[profile.dev]
panic = 'abort'
incremental = true
opt-level = 1

[profile.release]
panic = 'abort'
incremental = true
debug = true
